--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="en" mode="foo">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
@@ -7,9 +8,12 @@
   <script src="/build/mycomponent.js"></script>
 
 </head>
+
 <body>
 
   <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <ie-styles></ie-styles>
 
 </body>
+
 </html>
