Demonstrate subtler bug manifestation

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,17 @@
   <my-component first="Foo" last="Bar">
     <select></select>
   </my-component>
+  <my-component>
+    <p>Before Select</p>
+    <form>
+      <select>
+        <option>Foo</option>
+        <option>Bar</option>
+        <option>Baz</option>
+      </select>
+    </form>
+    <p>After Select</p>
+  </my-component>
 </body>
 
 </html>
